--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <script>
     async function loadProducts() {
       try {
-        const res = await fetch("http://127.0.0.1:5000/api/products");
+        const res = await fetch("https://gridtech-backend.onrender.com/api/products");
         const products = await res.json();
 
         const container = document.getElementById("product-list");
