Fix: frontend shows live products

--- a/index.html
+++ b/index.html
@@ -1,49 +1,92 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Grid Tech – Digital Product Store</title>
-  <link rel="stylesheet" href="style.css" />
+  <meta charset="UTF-8">
+  <title>Grid Tech - Digital Products</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      background: #f2f2f2;
+      color: #333;
+      margin: 0;
+      padding: 20px;
+    }
+    h1 {
+      text-align: center;
+      color: #444;
+    }
+    .container {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
+    }
+    .card {
+      background: #fff;
+      border: 1px solid #ccc;
+      border-radius: 10px;
+      margin: 15px;
+      width: 300px;
+      box-shadow: 0 4px 10px rgba(0,0,0,0.1);
+      overflow: hidden;
+    }
+    .card img {
+      width: 100%;
+    }
+    .card-content {
+      padding: 15px;
+    }
+    .card-content h3 {
+      margin: 0 0 10px;
+    }
+    .card-content p {
+      font-size: 14px;
+    }
+    .card-content button {
+      margin-top: 10px;
+      padding: 10px;
+      width: 100%;
+      background: #444;
+      color: white;
+      border: none;
+      cursor: pointer;
+    }
+    .card-content button:hover {
+      background: #222;
+    }
+  </style>
 </head>
 <body>
-  <header>
-    <h1>🛍️ Grid Tech</h1>
-    <p>Your One-Stop Shop for Software, Projects, Games, and Apps</p>
-  </header>
-
-  <section id="products">
-    <h3>Featured Products</h3>
-    <div class="product-grid" id="product-list">Loading...</div>
-  </section>
+  <h1>Featured Products</h1>
+  <div class="container" id="product-container">
+    Loading...
+  </div>
 
   <script>
-    async function loadProducts() {
-      try {
-        const res = await fetch("https://gridtech-backend.onrender.com/api/products");
-        const products = await res.json();
-
-        const container = document.getElementById("product-list");
+    fetch("https://gridtech-backend.onrender.com/api/products")
+      .then(response => response.json())
+      .then(products => {
+        const container = document.getElementById("product-container");
         container.innerHTML = "";
 
-        products.forEach(p => {
+        products.forEach(product => {
           const card = document.createElement("div");
-          card.className = "product-card";
+          card.className = "card";
           card.innerHTML = `
-            <img src="${p.image_url}" alt="${p.title}">
-            <h4>${p.title}</h4>
-            <p>${p.description}</p>
-            <span>₹${p.price}</span><br/>
-            <button onclick="alert('Simulating payment for: ${p.title}')">Buy Now</button>
+            <img src="${product.image_url}" alt="${product.title}">
+            <div class="card-content">
+              <h3>${product.title}</h3>
+              <p>${product.description}</p>
+              <p><strong>₹${product.price}</strong></p>
+              <button>Buy Now</button>
+            </div>
           `;
           container.appendChild(card);
         });
-      } catch (err) {
-        console.error("Error loading products:", err);
-      }
-    }
-
-    window.onload = loadProducts;
+      })
+      .catch(error => {
+        document.getElementById("product-container").innerHTML = "Failed to load products.";
+        console.error("Error:", error);
+      });
   </script>
 </body>
 </html>
