Fix fetch URL to connect frontend with backend

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
   </div>
 
   <script>
-    fetch("https://gridtech-backend.onrender.com/api/products")
+    fetch("https://gridtech-backend.onrender.com/products")
       .then(response => response.json())
       .then(products => {
         const container = document.getElementById("product-container");
