Test auto-deploy: updated homepage heading

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   </header>
 
   <main>
-    <h2>Featured Products</h2>
+    <h1>🧠 Grid Tech - The Smartest Project Store</h1>
     <div id="product-list" class="products-container">
       <p>Loading...</p>
     </div>
