Update heading to test auto-deploy

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <header>
-    <h1>🛒 Grid Tech</h1>
+    <h1>🌟 Grid Tech — Explore Smart Digital Products</h1>
     <p>Explore and buy digital products easily!</p>
   </header>
 
